--- a/Formulario Code/index.html
+++ b/Formulario Code/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageMaker</title>
-    <script src="funcoes.js"></script>
+    <script src="function.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,12 +13,13 @@
 <body>
     <div class="container py-5">
         <div class="text-center mb-3">
-            <h1>GERADOR DE CÓDIGO CSS E HTML</h1>
+            <h1>PAGEMAKER</h1>
+            <h1>Gerador de código HTML e CSS</h1>
         </div>  
     
         <div class="row mb-4">
             <div class="col-md-6">
-                <h4>Cabecalho</h4>
+                <h3>Cabeçalho</h3>
                 <div class="form-group">
                     <label for="corFundo">Cor de fundo</label>
                     <select id="corFundo" name="corFundo" class="form-control">
@@ -63,7 +64,7 @@
             </div>
 
             <div class="col-md-6">
-                <h4>Links</h4>
+                <h3>Links</h3>
                 <div class="form-group">
                     <label for="links">Texto para os links</label>
                     <input type="text" name="links" id="links" placeholder="link1; link2; link3; link4...." class="form-control">
@@ -99,7 +100,7 @@
 
         <div class="code-html">
             <div class="form-group">
-                <label class="html"><h3>HTML</h3></label>
+                <label class="html"><h2>HTML</h2></label>
                 <textarea class="form-control" cols="100" rows="30" id="codeHTML"></textarea><br>
                 <button class="btn btn-success" onclick="download('codeHTML', 'index.html')">Download do código</button>
             </div>
@@ -107,7 +108,7 @@
 
         <div class="code-css">
             <div class="form-group">
-                <label class="css"><h3>CSS</h3></label>
+                <label class="css"><h2>CSS</h2></label>
                 <textarea class="form-control" cols="100" rows="30" id="codeCSS"></textarea><br>
                 <button class="btn btn-success" onclick="download('codeCSS', 'estilo.css')">Download do código</button>
             </div>
