--- a/Formulario Code V2/index.html
+++ b/Formulario Code V2/index.html
@@ -65,27 +65,46 @@
                         <option value="17">17</option>
                     </select>
                 </div>
+
+                <div class="form-group">
+                    <label for="alturaCabecalho">Altura do cabeçalho (em px)</label>
+                    <input type="number" id="alturaCabecalho" name="alturaCabecalho" class="form-control"><br>
+                </div>
+                <div class="form-group">
+                    <label for="larguraCabecalho">Largura do cabeçalho (%)</label>
+                    <input type="number" id="larguraCabecalho" name="larguraCabecalho" class="form-control"><br>
+                </div>
+
+                <div class="form-group">
+                    <label for="fonteCabecalho">Fonte do cabeçalho</label>
+                    <select id="fonteCabecalho" name="fonteCabecalho" class="form-control">
+                        <option value="">-- Selecione --</option>
+                        <option value="Arial">Arial</option>
+                        <option value="Courier New">Courier New</option>
+                        <option value="Georgia">Georgia</option>
+                        <option value="Times New Roman">Times New Roman</option>
+                        <option value="Verdana">Verdana</option>
+                    </select>
+                </div>
             </div>
 
             <div class="col-md-6">
                 <h3>Links</h3>
                 <div class="form-group">
                     <label for="links">Texto para os links</label><br>
-                    <div class="d-flex align-items-center">
-                        <input type="text" name="links" id="links" placeholder="link1; link2; link3; link4...."
-                            class="form-control mr-1" style="flex-grow: 1;">
-                        <button class="btn btn-primary">+</button>
+                    <div id="linksContainer">
+                        <div class="d-flex align-items-center mb-2">
+                            <input type="text" name="links" class="form-control me-2" placeholder="Texto do link" style="flex: 2;">
+                            <input type="file" name="href" class="form-control me-2" style="flex: 2;">
+                            <button type="button" class="btn btn-primary" onclick="addHtmlLinks()" style="flex: 0 0 auto;">+</button>
+                        </div>
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <input type="file" name="href" id="href" class="form-control">
                 </div>
 
                 <div class="form-group">
                     <label for="corLinks">Cor do link</label>
                     <select name="corLinks" id="corLinks" class="form-control">
-                        <option value="FF0000" style="background-color: #FF0000; color: white">Vermelho</option>
+                        <option value="#FF0000" style="background-color: #FF0000; color: white">Vermelho</option>
                         <option value="#00FF00" style="background-color: #00FF00; color: white">Verde</option>
                         <option value="#0000FF" style="background-color: #0000FF; color: white">Azul</option>
                         <option value="#FFFF00" style="background-color: #FFFF00; color: white">Amarelo</option>
@@ -106,7 +125,17 @@
                     </div>
                 </div>
 
-                <button class="btn btn-primary" onclick="gerarCodigo()">Gerar Código</button>
+                <div class="form-group">
+                    <label class="hoverLinks"><a>Efeito hover no link</a></label>
+                    <select name="hoverLinks" id="hoverLinks" class="form-control">
+                        <option value="">-- Selecione --</option>
+                        <option value="negrito">Negrito</option>
+                        <option value="sublinhado">Sublinhado</option>
+                        <option value="cor">Mudar cor</option>
+                    </select><br>
+                </div>
+
+                <button class="btn btn-primary" id="geraCode" onclick="gerarCodigo()">Gerar Código</button>
             </div>
         </div>
 
