--- a/Professor Version/creator.html
+++ b/Professor Version/creator.html
@@ -88,7 +88,7 @@
 </div>
 
 <div id="containerCodPreview">
-        <div class="content" id="contanerPreview">
+        <div class="content" id="containerPreview">
             <iframe id="pagina"></iframe>
         </div>
 
@@ -96,12 +96,12 @@
     <div id="containerCod" class="content active">
         <h1>HTML</h1>
         <textarea cols="100" rows="10" id="codeHTML"></textarea><br>
-        <button onclick="download('codeHTML','')">downoad do código</button>
+        <button onclick="download('codeHTML','')">download do código</button>
 
 
         <h1>CSS</h1>
         <textarea id="codeCSS" cols="100" rows="10"></textarea><br>
-        <button onclick="download('codeCSS','estilo.css')">downoad do código</button><br>
+        <button onclick="download('codeCSS','estilo.css')">download do código</button><br>
 
     </div>
 
